@@ -9,7 +9,7 @@ project(qterminal)
 include(GNUInstallDirs)
 
 # qterminal version
-set(QTERMINAL_VERSION "0.17.0")
+set(QTERMINAL_VERSION "1.0.0")
 
 option(UPDATE_TRANSLATIONS "Update source translation translations/*.ts files" OFF)
 
@@ -20,8 +20,8 @@ endif()
 # we need qpa/qplatformnativeinterface.h for global shortcut
 
 # Minimum Versions
-set(LXQTBT_MINIMUM_VERSION "0.9.0")
-set(QTERMWIDGET_MINIMUM_VERSION "0.17.0")
+set(LXQTBT_MINIMUM_VERSION "0.10.0")
+set(QTERMWIDGET_MINIMUM_VERSION "1.0.0")
 set(QT_MINIMUM_VERSION "5.15.0")
 
 find_package(Qt5Gui ${QT_MINIMUM_VERSION} REQUIRED)
